@@ -446,6 +446,10 @@ mapping, except that the right hand side is an event name from
 use all \fBKEY_\fR or \fBBTN_\fR 
 codes for \*(T<\fB\-\-ui\-buttonmap\fR\*(T>.
 
+Aside from the named keys, you can also give the input
+code directly as number via the
+syntax \fBKEY_#\fINUM\fB\fR.
+
 Instead of the low level \fBKEY_\fR names,
 which represent keycodes, you can also use the higher
 level X11 keysyms \fBXK_\fR, the keysyms have
