@@ -5,6 +5,8 @@ xboxdrv 0.6.0 - (??/Jun/2010)
   regular PC joysticks with xboxdrv, useful if you need
   configurability or joy2key-like functionality, but don't have a
   Xbox360 gamepad
+* added KEY_#num, ABS_#num and REL_#num to allow refering to events by
+  number instead of name
 
 
 xboxdrv 0.5.0 - (26/May/2010)
